--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: 'https://github.com/sumitgora/wordpressapp.git'
-    targetRevision: HEAD
+    targetRevision: dev
     path: base
   destination:
     server: 'https://kubernetes.default.svc'
