--- a/base/wordpress-svc.yaml
+++ b/base/wordpress-svc.yaml
@@ -10,6 +10,10 @@ spec:
   selector:
     app: wordpress
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
