--- a/base/namespace.yaml
+++ b/base/namespace.yaml
@@ -2,3 +2,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: app
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: wp-gcsfuse-ksa
+  namespace: app
