--- a/base/wordpress-deployment.yaml
+++ b/base/wordpress-deployment.yaml
@@ -14,39 +14,56 @@ spec:
     metadata:
       labels:
         app: wordpress
+      annotations:
+        gke-gcsfuse/volumes: "true"
     spec:
+      serviceAccountName: wp-gcsfuse-ksa
+      # initContainers:
+      # - name: wait-for-filestore
+      #   image: busybox
+      #   command: ['sh', '-c', 'until [ -d /var/www/html ]; do echo "Waiting for Filestore..."; sleep 10; done']
+      #   volumeMounts:
+      #   - name: wordpress-persistent-storage
+      #     mountPath: /var/www/html
       containers:
-      - name: wordpress
-        image: wordpress:6.4-apache
-        ports:
-        - containerPort: 80
-        env:
-        - name: WORDPRESS_DB_HOST
-          value: "mysql-0.mysql-headless.app.svc.cluster.local:3306"
-        - name: WORDPRESS_DB_USER
-          valueFrom:
-            secretKeyRef:
-              name: mysql-credentials
-              key: MYSQL_USER
-        - name: WORDPRESS_DB_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-credentials
-              key: MYSQL_PASSWORD
-        - name: WORDPRESS_DB_NAME
-          valueFrom:
-            secretKeyRef:
-              name: mysql-credentials
-              key: MYSQL_DATABASE
-        # readinessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 80
-        #   initialDelaySeconds: 10
-        #   periodSeconds: 10
-        # livenessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 80
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 20
+        - name: wordpress
+          image: wordpress:6.8-apache
+          ports:
+            - containerPort: 80
+          env:
+            - name: WORDPRESS_DB_HOST
+              value: "mysql-0.mysql-headless.app.svc.cluster.local:3306"
+            - name: WORDPRESS_DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: MYSQL_USER
+            - name: WORDPRESS_DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: MYSQL_PASSWORD
+            - name: WORDPRESS_DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: MYSQL_DATABASE
+          volumeMounts:
+            - name: wordpress-persistent-storage
+              mountPath: /var/www/html/wp-content/uploads
+      volumes:
+        - name: wordpress-persistent-storage
+          persistentVolumeClaim:
+            claimName: wp-pv-claim
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 10
+          #   periodSeconds: 10
+          # livenessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 30
+          #   periodSeconds: 20
