--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,8 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
+  - filestore.yaml  
   - mysql-secret.yaml
   - mysql-headless-svc.yaml
   - mysql-statefulset.yaml
+  - wordpress-pvc.yaml
   - wordpress-deployment.yaml
   - wordpress-svc.yaml
