--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,10 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
-  - filestore.yaml  
+  - serviceaccount.yaml
+  - filestore.yaml
   - mysql-secret.yaml
   - mysql-headless-svc.yaml
   - mysql-statefulset.yaml
   - wordpress-pvc.yaml
   - wordpress-deployment.yaml
   - wordpress-svc.yaml
+  - wordpress-route.yaml
+  - wordpress-gateway.yaml
