--- a/base/wordpress-svc.yaml
+++ b/base/wordpress-svc.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: wordpress-service
   namespace: app
   labels:
     app: wordpress
 spec:
-  type: LoadBalancer
+  type: ClusterIP # or NodePort  (Ingress works with both)
+  # type: LoadBalancer # For Network LB (only for first time)
   selector:
     app: wordpress
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 80
