--- a/base/wordpress-deployment.yaml
+++ b/base/wordpress-deployment.yaml
@@ -54,7 +54,7 @@ spec:
             - containerPort: 80
           env:
             - name: WORDPRESS_DB_HOST
-              value: "mysql-0.mysql-headless.app.svc.cluster.local:3306"
+              value: "pxc-db-proxysql.app.svc.cluster.local:3306"
           command: ["sh", "-c"]
           args:
             [
