--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - serviceaccount.yaml
   - secret.yaml
   - filestore.yaml
+  - wordpress-config.yaml
+  - wordpress-backend.yaml
   - wordpress-pvc.yaml
   - wordpress-deployment.yaml
   - wordpress-svc.yaml
