--- a/base/wordpress-gateway.yaml
+++ b/base/wordpress-gateway.yaml
@@ -9,6 +9,7 @@ spec:
     - name: http
       protocol: HTTP
       port: 80
+      hostname: wordpress.example.com
       allowedRoutes:
         namespaces:
           from: Same
